--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
     <string name="customize_activity_text_always_show_bends_description">Bend notes will be displayed by default when you open the note picker</string>
     <string name="customize_activity_text_always_show_media_player">Always show media player</string>
     <string name="customize_activity_text_always_show_media_player_description">Media player will be displayed by default when you open a song</string>
+    <string name="customize_activity_text_play_note_sound">Play note sounds</string>
+    <string name="customize_activity_text_play_note_sound_description">Play an 8-bit sound when selecting a note from the note picker</string>
     <string name="customize_activity_background_color">Background color</string>
     <string name="customize_activity_background_color_title">Choose background color</string>
     <string name="customize_activity_menu_reset">Reset</string>
