Started addding chromatic support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,10 @@
     <string name="song_dialog_text_add_song">Add Song</string>
     <string name="song_dialog_text_edit_song">Edit Song</string>
     <string name="song_dialog_text_key">Key</string>
-    <string name="song_dialog_text_harp_type">Harmonica type:</string>
-    <string name="song_dialog_text_harp_type_diatonic_10">Diatonic(10)</string>
-    <string name="song_dialog_text_harp_type_chromatic_12">Chromatic(12)</string>
-    <string name="song_dialog_text_harp_type_chromatic_16">Chromatic(16)</string>
+    <string name="song_dialog_text_harp_type">Harp type</string>
+    <string name="song_dialog_text_harp_type_diatonic_10">Diatonic(10 Holes)</string>
+    <string name="song_dialog_text_harp_type_chromatic_12">Chromatic(12 Holes)</string>
+    <string name="song_dialog_text_harp_type_chromatic_16">Chromatic(16 Holes)</string>
     <string-array name="song_dialog_spinner_harp_type">
         <item>Diatonic (10 Holes)</item>
         <item>Chromatic (12 Holes)</item>
@@ -69,7 +69,7 @@
     <string name="note_picker_dialog_button_hide_bendings">Hide bends</string>
     <string name="note_picker_view_button_text">Text</string>
     <string name="note_picker_view_button_bends">Bends</string>
-    <string name="note_picker_view_button_button">Button</string>
+    <string name="note_picker_view_button_slide">Slide</string>
     <string name="note_picker_view_button_copy">Copy</string>
     <string name="note_picker_view_button_paste">Paste</string>
     <string name="note_picker_view_button_insert">Insert</string>
@@ -181,9 +181,9 @@
     <string name="customize_activity_text_chorus">Chorus</string>
     <string name="customize_activity_text_general">GENERAL</string>
     <string name="customize_activity_text_always_show_bends">Always show bend notes</string>
-    <string name="customize_activity_text_always_show_bends_description">Bend notes on a diatonic harmonica will be displayed by default when you open the note picker</string>
-    <string name="customize_activity_text_always_show_button">Always show button notes</string>
-    <string name="customize_activity_text_always_show_button_description">Button notes on a chromatic harmonica will be displayed by default when you open the note picker</string>
+    <string name="customize_activity_text_always_show_bends_description">Bend notes will be displayed by default when you open the note picker</string>
+    <string name="customize_activity_text_always_show_button">Always show slide notes</string>
+    <string name="customize_activity_text_always_show_button_description">Slide notes will be displayed by default when you open the note picker</string>
     <string name="customize_activity_text_always_show_media_player">Always show media player</string>
     <string name="customize_activity_text_always_show_media_player_description">Media player will be displayed by default when you open a song</string>
     <string name="customize_activity_text_play_note_sound">Play note sounds</string>
