Added 1-16 chromatic notation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,14 +183,16 @@
     <string name="customize_activity_text_chorus">Chorus</string>
     <string name="customize_activity_text_general">GENERAL</string>
     <string name="customize_activity_text_media_player">MEDIA PLAYER</string>
+    <string name="customize_activity_text_16_numbers_chromatic_notation">1…16 chromatic notation</string>
+    <string name="customize_activity_text_16_numbers_chromatic_notation_description">Use the 1…16 chromatic notation instead of °1…°4,1…12</string>
     <string name="customize_activity_text_always_show_bends">Always show bend notes</string>
     <string name="customize_activity_text_always_show_bends_description">Bend notes will be displayed by default when you open the note picker</string>
     <string name="customize_activity_text_always_show_button">Always show slide notes</string>
     <string name="customize_activity_text_always_show_button_description">Slide notes will be displayed by default when you open the note picker</string>
     <string name="customize_activity_text_always_show_media_player">Always show media player</string>
-    <string name="customize_activity_text_always_show_media_player_description">Media player will be displayed by default when you open a song</string>
+    <string name="customize_activity_text_always_show_media_player_description">The media player will be displayed by default when you open a song</string>
     <string name="customize_activity_text_play_closes_media_player">Hide media player after play</string>
-    <string name="customize_activity_text_play_closes_media_player_description">Media player will be hidden after a song starts playing</string>
+    <string name="customize_activity_text_play_closes_media_player_description">The media player will hide after you tap the play button</string>
     <string name="customize_activity_text_play_note_sound">Play note sounds</string>
     <string name="customize_activity_text_play_note_sound_description">Play an 8-bit sound when selecting a note from the note picker</string>
     <string name="customize_activity_background_color">Background color</string>
